--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "element-plus": "^2.2.28",
     "highlight.js": "^11.7.0",
